--- a/src/components/css/Editor.css
+++ b/src/components/css/Editor.css
@@ -1,27 +1,22 @@
-.app {
-  text-align: center;
-  background-color: #2a2a2ab5;
-  height: 100vh;
+.rdw-storybook-root {
+  margin: 50px;
+  width: 90%;
 }
-.app .rich-editor {
-  padding: 10rem;
+.rdw-storybook-wrapper {
 }
-.rich-editor .rdw-editor-main {
-  background-color: #fff;
+.rdw-storybook-editor {
+  border: 1px solid #f1f1f1;
+  padding: 5px;
+  border-radius: 2px;
+  max-height: 550px;
 }
-.rich-editor .DraftEditor-editorContainer {
-  padding: 1rem;
+.rdw-storybook-toolbar {
+  top: -130px;
 }
-.draft-editor-wrapper {
-  border: 1px solid #ccc;
-}
-.html-view {
-  background-color: #fff;
-  color: #000;
-  margin: auto;
-  width: 70%;
-  margin-bottom: 2rem;
-}
-h4 {
-  color: #fff;
+.rdw-storybook-textarea {
+  margin-top: 20px;
+  resize: none;
+  width: 100%;
+  border: 1px solid #f1f1f1;
+  height: 100px;
 }
