--- a/src/components/common/editor.css
+++ b/src/components/common/editor.css
@@ -1211,3 +1211,185 @@
     padding-left: 10px;
   }
 }
+.cdx-notify--error {
+  background: #fffbfb !important;
+  z-index: 100; 
+}
+.cdx-notify--error::before {
+  background: #fb5d5d !important;
+  z-index: 100;
+}
+.cdx-notify__input {
+  max-width: 130px;
+  padding: 5px 10px;
+  background: #f7f7f7;
+  border: 0;
+  border-radius: 3px;
+  font-size: 13px;
+  color: #656b7c;
+  outline: 0;
+  z-index: 100;
+}
+.cdx-notify__input:-ms-input-placeholder {
+  color: #656b7c;
+  z-index: 100;
+}
+.cdx-notify__input::placeholder {
+  color: #656b7c;
+  z-index: 100;
+}
+.cdx-notify__input:focus:-ms-input-placeholder {
+  color: rgba(101, 107, 124, 0.3);
+  z-index: 100;
+}
+.cdx-notify__input:focus::placeholder {
+  color: rgba(101, 107, 124, 0.3);
+  z-index: 100;
+}
+.cdx-notify__button {
+  border: none;
+  border-radius: 3px;
+  font-size: 13px;
+  padding: 5px 10px;
+  cursor: pointer;
+  z-index: 100;
+}
+.cdx-notify__button:last-child {
+  margin-left: 10px;
+  z-index: 100;
+}
+.cdx-notify__button--cancel {
+  background: #f2f5f7;
+  box-shadow: 0 2px 1px 0 rgba(16, 19, 29, 0);
+  color: #656b7c;
+  z-index: 100;
+}
+.cdx-notify__button--cancel:hover {
+  background: #eee;
+  z-index: 100;
+
+}
+.cdx-notify__button--confirm {
+  background: #34c992;
+  box-shadow: 0 1px 1px 0 rgba(18, 49, 35, 0.05);
+  color: #fff;
+  z-index: 100;
+
+}
+.cdx-notify__button--confirm:hover {
+  background: #33b082;
+  z-index: 100;
+
+}
+.cdx-notify__btns-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  margin-top: 5px;
+  z-index: 100;
+
+}
+.cdx-notify__cross {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  width: 10px;
+  height: 10px;
+  padding: 5px;
+  opacity: 0.54;
+  cursor: pointer;
+  z-index: 100;
+
+}
+.cdx-notify__cross::after,
+.cdx-notify__cross::before {
+  content: \'\';
+  position: absolute;
+  left: 9px;
+  top: 5px;
+  height: 12px;
+  width: 2px;
+  background: #575d67;
+  z-index: 100;
+
+}
+.cdx-notify__cross::before {
+  transform: rotate(-45deg);
+  z-index: 100;
+
+}
+.cdx-notify__cross::after {
+  transform: rotate(45deg);
+  z-index: 100;
+
+}
+.cdx-notify__cross:hover {
+  opacity: 1;
+  z-index: 100;
+
+}
+.cdx-notifies {
+  position: fixed;
+  z-index: 100;
+  bottom: 20px;
+  left: 20px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+}
+.cdx-notify {
+  z-index: 100;
+  position: relative;
+  width: 220px;
+  margin-top: 15px;
+  padding: 13px 16px;
+  background: #fff;
+  box-shadow: 0 11px 17px 0 rgba(23, 32, 61, 0.13);
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.4em;
+  word-wrap: break-word;
+}
+.cdx-notify::before {
+  content: \'\';
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 3px;
+  height: calc(100% - 6px);
+  margin: 3px;
+  border-radius: 5px;
+  background: 0 0;
+  z-index: 100;
+}
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.05);
+  }
+  70% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.cdx-notify--bounce-in {
+  animation-name: bounceIn;
+  animation-duration: 0.6s;
+  animation-iteration-count: 1;
+  z-index: 100;
+}
+.cdx-notify--success {
+  background: #fafffe !important;
+  z-index: 100;
+}
+.cdx-notify--success::before {
+  background: #41ffb1 !important;
+  z-index: 100;
+}
